Prevent no image icon to stretch

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -240,7 +240,7 @@ body {
 				height: 100%;
 				background-image: url("../images/logo.png");
 				background-repeat: no-repeat;
-				background-size: 50% 50%;
+				background-size: 150px;
 				background-position: center;
 				background-color: @darkBase;
 			}
